Fix category header visible over scrollbar

--- a/src/ui/atoms/scroll/Scroll.css
+++ b/src/ui/atoms/scroll/Scroll.css
@@ -16,6 +16,7 @@
   margin: 2px;
   border-radius: 10px;
   background-color: var(--bg-surface-scroll-track);
+  z-index: 1;
 }
 
 .Scroll__track[data-orientation="vertical"] {
